--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://baeyeonggi.github.io/react-portfolio/",
   "name": "port",
   "version": "0.1.0",
   "private": true,
@@ -6,10 +7,18 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "all": "^0.0.0",
+    "core-js": "^3.8.1",
+    "gh-pages": "^3.1.0",
+    "modules": "^0.4.0",
+    "node-sass": "^4.14.1",
     "react": "^17.0.1",
     "react-app-polyfill": "^2.0.0",
     "react-dom": "^17.0.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "regenerator-runtime": "^0.13.7",
+    "styled-components": "^5.2.1",
     "swiper": "^6.4.0",
     "web-vitals": "^0.2.4"
   },
@@ -17,7 +26,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
