--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-app-polyfill": "^2.0.0",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
+    "react-router-hash-link": "^2.3.1",
     "react-scripts": "4.0.1",
     "regenerator-runtime": "^0.13.7",
     "styled-components": "^5.2.1",
