--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "all": "^0.0.0",
+    "axios": "^0.21.0",
     "core-js": "^3.8.1",
     "gh-pages": "^3.1.0",
     "modules": "^0.4.0",
